--- a/inventories/all-in-one/hosts.yml
+++ b/inventories/all-in-one/hosts.yml
@@ -1,30 +1,4 @@
 ---
-all-in-one:
+all:
   hosts:
     localhost
-
-webservers:
-  children:
-    all-in-one
-
-coreservers:
-  children:
-    all-in-one
-
-vaultservers:
-  children:
-    all-in-one
-
-[scriptservers:
-  children:
-    all-in-one
-
-dbservers:
-  children:
-    all-in-one
-
-javaservers:
-  children:
-    coreservers
-    vaultservers
-    scriptservers
