--- a/inventories/all-in-one/group_vars/dbservers.yml
+++ b/inventories/all-in-one/group_vars/dbservers.yml
@@ -1,6 +1,6 @@
 ---
 # Variables for DB SERVERS in DEV environment
+mysql_port: 3306
 mysql_user: root
 mysql_password: root
-
-mysql_port: 3306
+mysql_default_user: mdm_user
