--- a/inventories/all-in-one/hosts.yml
+++ b/inventories/all-in-one/hosts.yml
@@ -2,3 +2,30 @@
 all:
   hosts:
     localhost
+
+
+webservers:
+  children:
+    all
+
+coreservers:
+  children:
+    all
+
+vaultservers:
+  children:
+    all
+
+scriptservers:
+  children:
+    all
+
+dbservers:
+  children:
+    all
+
+javaservers:
+  children:
+    coreservers
+    vaultservers
+    scriptservers
