--- a/inventories/all-in-one/hosts.yml
+++ b/inventories/all-in-one/hosts.yml
@@ -3,26 +3,25 @@ all:
   hosts:
     localhost
 
-
 webservers:
   children:
-    all
+    localhost
 
 coreservers:
   children:
-    all
+    webservers
 
 vaultservers:
   children:
-    all
+    webservers
 
 scriptservers:
   children:
-    all
+    webservers
 
 dbservers:
   children:
-    all
+    webservers
 
 javaservers:
   children:
