--- a/inventories/all-in-one/group_vars/dbservers.yml
+++ b/inventories/all-in-one/group_vars/dbservers.yml
@@ -4,6 +4,7 @@ mysql_port: 3306
 mysql_user: root
 mysql_password: root
 
+# Package name to use for Ubuntu
 mongodb_package: mongodb
 
 vault_backend: mysql
