--- a/roles/mongodb/tasks/configure.yml
+++ b/roles/mongodb/tasks/configure.yml
@@ -85,6 +85,8 @@
     owner: root
     group: root
     mode: 0644
+  become: true
+  become_user: root
   notify:
     - mongodb restart
     - service started
