correct template path

--- a/roles/vault/tasks/main.yml
+++ b/roles/vault/tasks/main.yml
@@ -18,7 +18,7 @@
 
   - name: Copy vault config to server
     template:
-      src: /templates/vaultconfig.hcl.j2
+      src: ./templates/vaultconfig.hcl.j2
       dest: /etc/opt/vault/vaultconfig.hcl
     become: true
 
