--- a/roles/vault/defaults/main.yml
+++ b/roles/vault/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
 vault_version: "{{ lookup('env','VAULT_VERSION') | default('1.1.2', true) }}"
+vault_server: "127.0.0.1"
 vault_port: 8200
 
 vault_backend_db: "vault"
