--- a/inventories/all-in-one/hosts.yml
+++ b/inventories/all-in-one/hosts.yml
@@ -3,28 +3,19 @@ all:
   hosts:
     localhost
   children:
+
     webservers:
       hosts:
         localhost
 
-    coreservers:
+    appservers:
       children:
         webservers:
 
-    vaultservers:
-      children:
-        webservers:
-
-    scriptservers:
+    indexservers:
       children:
         webservers:
 
     dbservers:
       children:
         webservers:
-
-    javaservers:
-      children:
-        coreservers:
-        vaultservers:
-        scriptservers:
