--- a/all-in-one-install.yml
+++ b/all-in-one-install.yml
@@ -1,19 +1,28 @@
 ---
 ## Prerequisite
-## be sure ansible.cfg knows your inventory folder
+## be sure ansible.cfg knows your inventory folder and authorize non ssh checks
 # more /etc/ansible/ansible.cfg
 ## Test with
 # ansible-playbook all-in-one-install.yml -i ./inventories/all-in-one/hosts.yml --check
 - hosts: all
   roles:
-    - jdk
+    - system
 
 - hosts: dbservers
   roles:
     - mysql
     - mongodb
+
+- hosts: indexservers
+  roles:
     - elasticsearch
+
+- hosts: appservers
+  roles:
+    - jdk
     - vault
+    - sweagle-core
+
 
 - hosts: webservers
   roles:
