--- a/roles/system/tasks/main.yml
+++ b/roles/system/tasks/main.yml
@@ -28,4 +28,5 @@
   selinux:
     state: disabled
   become: true
+  when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
   tags: system
