--- a/roles/sweagle-core/default/main.yml
+++ b/roles/sweagle-core/default/main.yml
@@ -1,8 +1,11 @@
 ---
+sweagle_system_user: sweagle
+sweagle_system_group: sweagle
 
 sweagle_installation_folder: /opt/SWEAGLE
-sweagle_version: 3.0.0
+
+sweagle_version:
 sweagle_service_name: sweagle
 sweagle_heap: 512m
 sweagle_tenant: poc
-sweagle_license_key: 
+sweagle_license_key:
