--- a/roles/system/tasks/main.yml
+++ b/roles/system/tasks/main.yml
@@ -5,6 +5,7 @@
     state: stopped
     enabled: false
   become: true
+  when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
   tags: system
 
 - name: install screen, jq and telnet
