--- a/roles/mongodb/tasks/configure-sweagle.yml
+++ b/roles/mongodb/tasks/configure-sweagle.yml
@@ -1,6 +1,6 @@
 - name: Start MongoDB Server
   systemd:
-    name: mongod
+    name: "{{ mongodb_daemon_name }}"
     state: started
 
 - name: Check SWEAGLE user exists
