correct mongo daemon user

--- a/inventories/all-in-one/group_vars/dbservers.yml
+++ b/inventories/all-in-one/group_vars/dbservers.yml
@@ -8,10 +8,9 @@ mysql_password: root
 # Package name to use for Ubuntu
 mongodb_package: mongodb
 mongodb_version: "3.6"
-mongodb_security_authorization: disabled
-mongodb_user: sweagle
+mongodb_security_authorization: "disabled"
 
-mongodb_storage_dbpath: /opt/SWEAGLE/mongo
+mongodb_storage_dbpath: "/opt/SWEAGLE/mongo"
 
 mongodb_user_admin_name: sweagle
 mongodb_user_admin_password: sweagle
