--- a/roles/mongodb/tasks/configure-sweagle.yml
+++ b/roles/mongodb/tasks/configure-sweagle.yml
@@ -4,7 +4,7 @@
     state: started
 
 - name: Check SWEAGLE user exists
-  shell: mongo {{ mongodb_user }} --eval 'db.getUsers()'
+  shell: mongo "{{ sweagle_mongo_db }}" --eval 'db.getUsers()'
   register: mongo_users
 
 #- name: Check if some user is not there already - try to get user list as anonymous
@@ -28,13 +28,13 @@
 - name: Create MongoDB SWEAGLE Databases
   shell: mongo --eval 'db.getSiblingDB("{{ item }}")'
   with_items:
-    - sweagle
+    - "{{ sweagle_mongo_db }}"
     - admin
   when: user_output.rc != 0
 
 - name: create MongoDB SWEAGLE user
   mongodb_user:
-    database: "{{ mongodb_user }}"
+    database: "{{ sweagle_mongo_db }}"
     name: "{{ sweagle_mongo_user }}"
     password: "{{ sweagle_mongo_password }}"
     update_password: "{{ mongodb_user_update_password }}"
