--- a/inventories/all-in-one/group_vars/dbservers.yml
+++ b/inventories/all-in-one/group_vars/dbservers.yml
@@ -8,6 +8,8 @@ mysql_password: root
 # Package name to use for Ubuntu
 mongodb_package: mongodb
 mongodb_version: "3.6"
+
+mongodb_net_port: 27017
 mongodb_security_authorization: "disabled"
 
 mongodb_storage_dbpath: "/opt/SWEAGLE/mongo"
