--- a/roles/mongodb/tasks/configure-sweagle.yml
+++ b/roles/mongodb/tasks/configure-sweagle.yml
@@ -30,6 +30,8 @@
     update_password: "{{ mongodb_user_update_password }}"
     roles:
       - { db: "{{ mongodb_user }}", role: "readWrite" }
+    login_user: "{{ mongodb_root_admin_name }}"
+    login_password: "{{ mongodb_root_admin_password }}"
     login_port: "{{ mongodb_net_port }}"
 
 
