--- a/roles/mysql/default/main.yml
+++ b/roles/mysql/default/main.yml
@@ -1,5 +1,4 @@
 ---
 # Default values for MYSQL parameters
-mysql_default_user: root
-
-mysql_default_port: 3306
+mysql_root_user: root
+mysql_port: 3306
