--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -1,26 +1,30 @@
 ---
 # Install MYSQL
-    - name: Install mysql
-      package:
-        name: mysql-server
-        state: present
-      become: true
-      become_user: root
-      tags: mysql
+- name: Install mysql
+  package:
+    name: mysql-server
+    state: present
+  become: true
+  become_user: root
+  tags: mysql
 
-    - name: Configure Mysql
-      template:
-        src: "{{ ansible_home_dir }}/roles/mysql/templates/my.cnf.j2"
-        dest: "{{ mysql_config_dir }}/my.cnf"
-        mode: preserve
-      become: true
-      become_user: root
-      notify: "Restart mysql"
-      tags: mysql
+- name: Configure Mysql
+  template:
+    src: "{{ ansible_home_dir }}/roles/mysql/templates/my.cnf.j2"
+    dest: "{{ mysql_config_dir }}/my.cnf"
+    mode: preserve
+  become: true
+  become_user: root
+  notify: "Restart mysql"
+  tags: mysql
 
-    - name: Check mysql service is running
-      service:
-        name: mysql
-        enabled: yes
-        state: started
-      tags: mysql
+- name: Check mysql service is running
+  service:
+    name: mysql
+    enabled: yes
+    state: started
+  tags: mysql
+
+- name: Include SWEAGLE configuration.yml
+  include: configure-sweagle.yml
+  tags: mysql
