--- a/all-in-one-install.yml
+++ b/all-in-one-install.yml
@@ -4,6 +4,13 @@
 # more /etc/ansible/ansible.cfg
 ## Test with
 # ansible-playbook all-in-one-install.yml -i ./inventories/all-in-one/hosts.yml --check
+##
+## To run only for some components use
+#ansible-playbook all-in-one-install.yml -i ./inventories/all-in-one/hosts.yml --tags "<COMPONENT>"
+#ex to do only mySQL: ansible-playbook all-in-one-install.yml -i ./inventories/all-in-one/hosts.yml --tags "mysql"
+#ex to do only sweagle: ansible-playbook all-in-one-install.yml -i ./inventories/all-in-one/hosts.yml --tags "sweagle"
+
+
 - hosts: all
   roles:
     - system
