--- a/roles/mongodb/tasks/configure-sweagle.yml
+++ b/roles/mongodb/tasks/configure-sweagle.yml
@@ -3,12 +3,12 @@
     name: "{{ mongodb_daemon_name }}"
     state: started
   become: true
-  tags: mongodb
+  tags: [ mongodb, sweagle, sweagle-mongodb ]
 
 - name: Get list of MongoDB user
   shell: mongo "{{ sweagle_mongo_db }}" --eval 'db.getUsers()'
   register: mongo_users
-  tags: mongodb
+  tags: [ mongodb, sweagle, sweagle-mongodb ]
 
 #- debug: var=mongo_users
 
@@ -16,14 +16,14 @@
   shell: echo "{{ mongo_users.stdout }}" | grep "{{ sweagle_mongo_db }}"."{{ sweagle_mongo_user }}"
   register: user_output
   ignore_errors: true
-  tags: mongodb
+  tags: [ mongodb, sweagle, sweagle-mongodb ]
 
 - name: Create MongoDB SWEAGLE Databases
   shell: mongo --eval 'db.getSiblingDB("{{ item }}")'
   with_items:
     - "{{ sweagle_mongo_db }}"
     - admin
-  tags: mongodb
+  tags: [ mongodb, sweagle, sweagle-mongodb ]
   when: user_output.rc != 0
 
 #- name: Create MongoDB SWEAGLE user
@@ -38,10 +38,10 @@
 #    login_user: "{{ mongodb_root_admin_name }}"
 #    login_password: "{{ mongodb_root_admin_password }}"
 #    login_port: "{{ mongodb_net_port }}"
-#  tags: mongodb
+#  tags: [ mongodb, sweagle, sweagle-mongodb ]
 
 
 - name: Create MongoDB SWEAGLE Users
   shell: mongo {{ sweagle_mongo_db }} --eval 'printjson(db.createUser({ user:"{{ sweagle_mongo_user }}", pwd:"{{ sweagle_mongo_password }}", roles:[{ role:"readWrite", db:"{{ sweagle_mongo_db }}"}]}))'
-  tags: mongodb
+  tags: [ mongodb, sweagle, sweagle-mongodb ]
   when: user_output.rc != 0
