--- a/roles/mongodb/tasks/configure.yml
+++ b/roles/mongodb/tasks/configure.yml
@@ -4,12 +4,14 @@
   group:
     name: "{{ mongodb_user }}"
     state: present
+  tags: mongodb
 
 - name: create mongodb system user
   user:
     name: "{{ mongodb_user }}"
     group: "{{ mongodb_user }}"
     state: present
+  tags: mongodb
 
 # Workaround because default(omit) is not working. At least in Ansible 2.8.
 
@@ -19,6 +21,7 @@
     gid: "{{ mongodb_gid }}"
     state: present
   when: mongodb_gid is defined
+  tags: mongodb
 
 - name: set mongodb uid
   user:
@@ -27,6 +30,7 @@
     group: "{{ mongodb_user }}"
     state: present
   when: mongodb_uid is defined
+  tags: mongodb
 
 - name: Create keyFile
   copy:
@@ -36,6 +40,7 @@
     group: "root"
     mode: 0600
   when: mongodb_replication_replset | length > 0
+  tags: mongodb
 
 - name: Create log dir if missing
   file:
@@ -48,11 +53,13 @@
   become: true
   become_user: root
   when: mongodb_systemlog_destination == "file"
+  tags: mongodb
 
 - name: Check that logfile exists
   stat: path={{ mongodb_systemlog_path }}
   register: logfile_stat
   when: mongodb_systemlog_destination == "file"
+  tags: mongodb
 
 - name: Create log if missing
   file:
@@ -65,6 +72,7 @@
   when: ( mongodb_systemlog_destination == "file"
         and logfile_stat is defined
         and not logfile_stat.stat.exists )
+  tags: mongodb
 
 - name: Ensure dbpath directory
   file:
@@ -77,7 +85,7 @@
     follow: true
   become: true
   become_user: root
-
+  tags: mongodb
 
 - name: Configure mongodb
   template:
@@ -93,6 +101,8 @@
     - mongodb restart
     - service started
     - wait when mongodb is started
+  tags: mongodb
 
 - name: Flush all handlers at this point
   meta: flush_handlers
+  tags: mongodb
