--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -1,27 +1,16 @@
 ---
 # Install MYSQL
-- name: Install MySQL server
+- name: Install MySQL packages
   package:
-    name: mysql-server
+    name: {{ item }}
     state: present
   become: true
   become_user: root
-  tags: mysql
-
-- name: Install MySQL client
-  package:
-    name: mysql-client
-    state: present
-  become: true
-  become_user: root
-  tags: mysql
-
-- name: Install MySQL common
-  package:
-    name: mysql-common
-    state: present
-  become: true
-  become_user: root
+  with items:
+    - mysql-server
+    - mysql-client
+    - mysql-common
+    - python-mysqldb
   tags: mysql
 
 - name: Configure MySQL
