--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -2,7 +2,7 @@
 # Install MYSQL
 - name: Install MySQL packages
   package:
-    name: {{ item }}
+    name: "{{ item }}"
     state: present
   become: true
   become_user: root
