--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -4,7 +4,7 @@
   package:
     name: "{{ item }}"
     state: present
-  with items:
+  with_items:
     - mysql-server
     - mysql-client
     - mysql-common
